scripts/nas-ingress.yaml
# NAS k8s ingress template: SSL passthrough for ide.kushnir.cloud → ${IDE_WINDOWS_BACKEND_HOST}:443
# Render and apply: bash scripts/render-nas-ingress.sh --apply
#
# Requires nginx-ingress with --enable-ssl-passthrough
# Check: kubectl -n ingress-nginx get deploy ingress-nginx-controller -o jsonpath='{.spec.template.spec.containers[0].args}' | tr , '\n' | grep ssl-passthrough
# Enable: kubectl -n ingress-nginx patch deploy ingress-nginx-controller --type=json \
#   -p='[{"op":"add","path":"/spec/template/spec/containers/0/args/-","value":"--enable-ssl-passthrough"}]'
---
apiVersion: v1
kind: Service
metadata:
  name: ide-windows-backend
  namespace: default
spec:
  type: ExternalName
  externalName: ${IDE_WINDOWS_BACKEND_HOST}
  ports:
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ide-kushnir-cloud
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ide.kushnir.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ide-windows-backend
                port:
                  number: 443
